# LEOLRS0-3

./: .gitignore  README.md  Start_UI.command  app.py  pyproject.toml
.github/workflows/: daily-signal.yml
LEOLRS0-3/: requirements.txt
LEOLRS0-3/LEOLRS0_3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
LEOLRS0-3/docs/: CHANGELOG.en.md  CHANGELOG.md  architecture.md
LEOLRS0-3/outputs/: backtest.csv  backtest_2020.csv  backtest_cmp.csv  leo_backtest.csv  leo_trades.csv  maintenance_backtest.csv  maintenance_trades.csv  trades.csv  trades_2020.csv  trades_cmp.csv
LEOLRS0-3/tests/: test_gui_helpers.py  test_report.py  test_signals.py  test_timezones.py
LEOLRS0-3/trend_system/: __main__.py  backtest.py  data.py  exposure_rules.py  gui.py  notify.py  portfolio.py  signals.py  timezones.py
config/: settings.toml
config/profiles/: Leo-Safe.toml  Leo.toml  README.md  SAFE.toml
docs/: CHANGELOG.en.md  CHANGELOG.md  deployment-log.md
docs/architecture/: frontend-transition-notes.md  module-boundaries.md  sidebar-loading-and-reference-plan.md  slider-and-language-ui-research.md  target-architecture.md  (+1 more)
tests/: test_backtest.py  test_daily_page_helpers.py  test_future_module_service.py  test_github_adapters.py  test_gui_helpers.py  test_notify.py  test_portfolio.py  test_report.py  test_services.py  test_signals.py  test_streamlit_page_registry.py  test_streamlit_shared_helpers.py  test_timezones.py  test_tradingview_chart.py
trend_system/: __init__.py  __main__.py  backtest.py  config.py  gui.py  report.py  signals.py  trade_timeline.py
(+55 files in other folders)
